deployment/base/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: trichter
  labels:
    app.kubernetes.io/name: api
    app.kubernetes.io/part-of: trichter
    app.kubernetes.io/component: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: api
        app.kubernetes.io/part-of: trichter
        app.kubernetes.io/component: backend
    spec:
      containers:
        - name: api
          image: ghcr.io/definitelynotsimon13/trichter-monorepo/backend:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
      restartPolicy: Always
